# recommender_system

./: README.md  app.py  pyproject.toml  requirements.txt
src/: helper.py  job_api.py
