[project]
name = "recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=3.0.4",
    "groq>=0.37.1",
    "langchain==1.3.2",
    "langchain-community==0.4.2",
    "langchain-groq==1.1.3",
    "langgraph==1.2.2",
    "mcp[cli]>=1.28.1",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
